# AdventOfCode2021

./: CMakeLists.txt
01_1/: main.cpp
01_2/: main.cpp
01_2_B/: main.cpp
02_1/: main.cpp
02_2/: main.cpp
03_1/: main.cpp
03_2/: main.cpp
03_2_B/: main.cpp
04_1/: main.cpp
04_2/: main.cpp
05_1/: main.cpp
05_2/: main.cpp
06_1/: main.cpp
06_2/: main.cpp
07_1/: main.cpp
07_2/: main.cpp
08_1/: main.cpp
08_2/: main.cpp
08_2_B/: main.cpp
09_1/: main.cpp
09_2/: main.cpp
10_1/: main.cpp
10_2/: main.cpp
11_1/: main.cpp
11_2/: main.cpp
12_1/: main.cpp
12_2/: main.cpp
13_1/: main.cpp
13_2/: main.cpp
14_1/: main.cpp
14_2/: main.cpp
15_1/: main.cpp
15_2/: main.cpp
16_1/: main.cpp
16_2/: main.cpp
17_2/: main.cpp
18_1/: main.cpp
18_2/: main.cpp
19_1/: main.cpp
19_2/: main.cpp
20_1/: main.cpp
20_2/: main.cpp
21_1/: main.cpp
21_2/: main.cpp
22_1/: main.cpp
22_2/: main.cpp
23_2/: main.cpp
24_1/: Sheet.xlsx  main.cpp
24_2/: Sheet.xlsx
25_1/: main.cpp
