cmake_minimum_required(VERSION 3.20)
project(01_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(01_1/input_01_1.txt input_01_1.txt COPYONLY)
add_executable(01_1 01_1/main.cpp)

project(01_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(01_2/input_01_2.txt input_01_2.txt COPYONLY)
add_executable(01_2 01_2/main.cpp)

project(01_2_B)
set(CMAKE_CXX_STANDARD 14)
configure_file(01_2_B/input_01_2_B.txt input_01_2_B.txt COPYONLY)
add_executable(01_2_B 01_2_B/main.cpp)

project(02_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(02_1/input_02_1.txt input_02_1.txt COPYONLY)
add_executable(02_1 02_1/main.cpp)

project(02_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(02_2/input_02_2.txt input_02_2.txt COPYONLY)
add_executable(02_2 02_2/main.cpp)

project(03_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(03_1/input_03_1.txt input_03_1.txt COPYONLY)
add_executable(03_1 03_1/main.cpp)

project(03_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(03_2/input_03_2.txt input_03_2.txt COPYONLY)
add_executable(03_2 03_2/main.cpp)

project(03_2_B)
set(CMAKE_CXX_STANDARD 14)
configure_file(03_2_B/input_03_2_B.txt input_03_2_B.txt COPYONLY)
add_executable(03_2_B 03_2_B/main.cpp)

project(04_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(04_1/input_04_1.txt input_04_1.txt COPYONLY)
add_executable(04_1 04_1/main.cpp)

project(04_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(04_2/input_04_2.txt input_04_2.txt COPYONLY)
add_executable(04_2 04_2/main.cpp)

project(05_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(05_1/input_05_1.txt input_05_1.txt COPYONLY)
add_executable(05_1 05_1/main.cpp)

project(05_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(05_2/input_05_2.txt input_05_2.txt COPYONLY)
add_executable(05_2 05_2/main.cpp)

project(06_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(06_1/input_06_1.txt input_06_1.txt COPYONLY)
add_executable(06_1 06_1/main.cpp)

project(06_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(06_2/input_06_2.txt input_06_2.txt COPYONLY)
add_executable(06_2 06_2/main.cpp)

project(07_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(07_1/input_07_1.txt input_07_1.txt COPYONLY)
add_executable(07_1 07_1/main.cpp)

project(07_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(07_2/input_07_2.txt input_07_2.txt COPYONLY)
add_executable(07_2 07_2/main.cpp)

project(08_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(08_1/input_08_1.txt input_08_1.txt COPYONLY)
add_executable(08_1 08_1/main.cpp)

project(08_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(08_2/input_08_2.txt input_08_2.txt COPYONLY)
add_executable(08_2 08_2/main.cpp)

project(08_2_B)
set(CMAKE_CXX_STANDARD 14)
configure_file(08_2_B/input_08_2_B.txt input_08_2_B.txt COPYONLY)
add_executable(08_2_B 08_2_B/main.cpp)

project(09_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(09_1/input_09_1.txt input_09_1.txt COPYONLY)
add_executable(09_1 09_1/main.cpp)

project(09_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(09_2/input_09_2.txt input_09_2.txt COPYONLY)
add_executable(09_2 09_2/main.cpp)

project(10_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(10_1/input_10_1.txt input_10_1.txt COPYONLY)
add_executable(10_1 10_1/main.cpp)

project(11_1)
set(CMAKE_CXX_STANDARD 14)
configure_file(11_1/input_11_1.txt input_11_1.txt COPYONLY)
add_executable(11_1 11_1/main.cpp)

project(11_2)
set(CMAKE_CXX_STANDARD 14)
configure_file(11_2/input_11_2.txt input_11_2.txt COPYONLY)
add_executable(11_2 11_2/main.cpp)